content and css breakpoints set

--- a/mod2-sol/index.html
+++ b/mod2-sol/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Assignment Solution for Module 2</title>
 </head>
+
 <body>
     <h1>Our Menu</h1>
     <div class="row">
-        <div class="colum">
-            <div class="title"></div>
-            <div class="description>"></div>
+        <div class="column">
+            <div class="title">Chicken</div>
+            <div class="description>">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
+                sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet purus
+                vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim justo
+                dapibus lectus, in consequat nibh mi non justo.</div>
         </div>
-        <div class="colum">
-            <div class="title"></div>
-            <div class="description>"></div>
+        <div class="column">
+            <div class="title">Beef</div>
+            <div class="description>">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
+                sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet purus
+                vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim justo
+                dapibus lectus, in consequat nibh mi non justo.</div>
         </div>
-        <div class="colum">
-            <div class="title"></div>
-            <div class="description>"></div>
+        <div class="column">
+            <div class="title">Sushi</div>
+            <div class="description>">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
+                sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet purus
+                vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim justo
+                dapibus lectus, in consequat nibh mi non justo.</div>
         </div>
     </div>
 </body>
+
 </html>
