desktop breakpoints complete

--- a/mod2-sol/index.html
+++ b/mod2-sol/index.html
@@ -11,26 +11,38 @@
 <body>
     <h1>Our Menu</h1>
     <div class="row">
-        <div class="column">
-            <div class="title">Chicken</div>
-            <div class="description>">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
-                sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet purus
-                vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim justo
-                dapibus lectus, in consequat nibh mi non justo.</div>
+        <div class="column1">
+            <div class="title1">Chicken</div>
+            <div class="description">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
+                    sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet
+                    purus
+                    vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim
+                    justo
+                    dapibus lectus, in consequat nibh mi non justo.</p>
+            </div>
         </div>
-        <div class="column">
-            <div class="title">Beef</div>
-            <div class="description>">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
-                sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet purus
-                vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim justo
-                dapibus lectus, in consequat nibh mi non justo.</div>
+        <div class="column2">
+            <div class="title2">Beef</div>
+            <div class="description">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
+                    sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet
+                    purus
+                    vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim
+                    justo
+                    dapibus lectus, in consequat nibh mi non justo.</p>
+            </div>
         </div>
-        <div class="column">
-            <div class="title">Sushi</div>
-            <div class="description>">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
-                sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet purus
-                vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim justo
-                dapibus lectus, in consequat nibh mi non justo.</div>
+        <div class="column3">
+            <div class="title3">Sushi</div>
+            <div class="description">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus tempor tortor
+                    sed pulvinar. Nunc accumsan porttitor placerat. Donec ut elementum eros. Mauris molestie sit amet
+                    purus
+                    vel egestas. Praesent malesuada mollis sagittis. Donec sodales, augue sed placerat lacinia, enim
+                    justo
+                    dapibus lectus, in consequat nibh mi non justo.</p>
+            </div>
         </div>
     </div>
 </body>
